@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * CookieFilter now conforms to RFC6265 standard by only copying expected cookies instead of all (thanks to Maciej Ciszewski for pull request) (issue 956).
+* Prettifier can now prettify empty xml body (issue 960)
 
 Change log 3.0.6 (2017-11-23)
 -----------------------------
